0031925: Foundation Classes, OSD_Host::InternetAddress() - possible NULL dereference on copying gethostbyname() result

Changes on non-Windows platforms:
- Deprecated gethostbyname() has been replaced by getifaddrs()+inet_ntop() handling IPv4+IPv6 addresses;
- External IPs are now preferred comparing to dummy localhost 127.0.0.1.